fix nav spacing...again (#197)

--- a/sitemedia/scss/base/_navigation.scss
+++ b/sitemedia/scss/base/_navigation.scss
@@ -53,7 +53,7 @@
   outline: none;
 
   .navigation-title {
-    margin: 0 10px;
+    // margin: 0 10px;
     padding: .25em .5em;
     position: relative;
     line-height: 1;
